# contrib-palentir-smol

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  forfreeever.txt  main.py  main_camel.py  main_pipeline.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
docs/: MCP_INTEGRATION.md
examples/: graph_builder_example.py  mcp_integration_example.py  task_orchestrator_example.py
kitten-palentir/kitten_palentir/agents/: camel_agents.py  camel_integrated_agents.py  camel_integrated_agents_v2.py  graph_aware_agents.py  graph_builder_agent.py  social_media_agent.py  task_orchestrator_agent.py
kitten-palentir/kitten_palentir/api/: main.py
kitten-palentir/kitten_palentir/api/middleware/: __init__.py  errors.py  logging.py  security.py
kitten-palentir/kitten_palentir/api/models/: __init__.py  schemas.py
kitten-palentir/kitten_palentir/api/routes/: __init__.py  graph.py  orchestration.py  qa.py  tasks.py  workforce.py
kitten-palentir/kitten_palentir/config/: settings.py
kitten-palentir/kitten_palentir/frontend/: app.py  graph_realtime_component.py  streamlit_graph_ui.py
kitten-palentir/kitten_palentir/models/: graph_nodes.py  metadata.py
kitten-palentir/kitten_palentir/services/: graph_visualization.py  graphistry_service.py  task_generation_service.py
kitten-palentir/kitten_palentir/toolkits/: advanced_osint_toolkit.py  mcp_integration.py  social_media_toolkit.py
kitten-palentir/kitten_palentir/workforce/: camel_integrated_workforce.py  camel_workforce.py  pipeline_mode.py  pipeline_workforce.py  task_system.py
kitten-palentir/src/utils/: service_config.py
tests/: conftest.py  pytest_skip_helpers.py  test_agents.py  test_camel_integration.py  test_frontend.py  test_models.py  test_pipeline.py  test_services.py  test_toolkits.py  test_workforce.py
tests/integration/: test_workflow_integration.py
tests/unit/: test_api_orchestration.py  test_task_orchestrator.py
